--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,12 @@ input::placeholder {
   color: var(--clr-augmented-200);
 }
 
+.slider-icon {
+  width: 100%;
+  max-width: 32px;
+  height: auto;
+}
+
 /* =========================================
               Preloader
 ============================================ */
@@ -301,6 +307,7 @@ input, select {
 label .custom-select {
   position: relative;
   font-family: "Roboto Mono", monospace;
+  font-family: var(--ff-font-body);
 }
 
 label .custom-select select {
@@ -316,7 +323,7 @@ label .select-selected:after {
   position: absolute;
   content: "";
   top: 14px;
-  right: 10px;
+  right: 12px;
   width: 0;
   height: 0;
   border: 6px solid transparent;
@@ -359,123 +366,73 @@ label .select-items div:hover, .same-as-selected {
 }
 
 /*=============================================
-            input[type=range]
+            control-wrapper
 ================================================*/
-.range {
-  height: 80px;
-  max-width: 100%;
-  width: 100%;
-  background: #fff;
-  background: var(--clr-augmented-100);
-  border-radius: 10px;
-  padding: 0 65px 0 45px;
-  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+.control-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*justify-content: center;*/
+  margin-bottom: 2em;
 }
 
-.slider-value {
-  position: relative;
-  width: 100%;
-}
-
-.slider-value span {
-  position: absolute;
-  height: 48px;
-  width: 48px;
-  transform: translateX(-70%) scale(0);
-  font-weight: 500;
-  font-family: var(--ff-font-mono);
-  top: -40px;
-  line-height: 55px;
-  z-index: 2;
-  color: #fff;
-  color: var(--clr-augmented-100);
-  transform-origin: bottom;
-  transition: transform 0.3s ease-in-out;
-}
-
-.slider-value span.show {
-  transform: translateX(-55%) scale(1);
-}
-
-.slider-value span:after {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 100%;
-  background: #19334d;
-  border: 3px solid #fff;
-  z-index: -1;
-  left: 50%;
-  transform: translateX(-50%) rotate(45deg);
-  transform: translateX(-78%) rotate(45deg);
-  border-bottom-left-radius: 50%;
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
-  border-top-left-radius: 50%;
-  border-top-right-radius: 50%;
-}
-
-.field {
+/*=============================================
+            slider-wrapper
+================================================*/
+.slider-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  position: relative;
-}
-
-.field .value {
-  position: absolute;
-  font-size: 18px;
-  color: tomato;
-  color: var(--clr-augmented-400);
-  font-weight: 600;
-}
-
-.field .value.left {
-  left: -22px;
-}
-
-.field .value.right {
-  right: -43px;
-}
-
-.range input {
-  -webkit-appearance: none;
-  appearance: none;
+  height: 72px;
+  margin: 0 16px;
+  max-width: 600px;
   width: 100%;
-  height: 3px;
-  background: #ddd;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-  z-index: 2222;
+  padding: 0 16px;
+  border-radius: var(--br-border-radius);
+  background: var(--clr-neutral-100);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.range input::-webkit-slider-thumb {
-  -webkit-appearance: none;
+.slider-wrapper:not(:nth-child(3)) {
+  margin-bottom: 1em;
+}
+
+/*=============================================
+            slider-input
+================================================*/
+.slider-input {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 8px;
   appearance: none;
-  width: 20px;
-  height: 20px;
-  background: #19334d;
-  border-radius: 50%;
-  background: #19334d;
-  border: 1px solid #19334d;
+  height: 16px;
+  border-radius: 16px;
+  background-color: var(--clr-neutral-300);
+  box-shadow: 0 0 0 2px var(--clr-neutral-300);
+  overflow: hidden;
   cursor: pointer;
 }
 
-.range input::-moz-range-thumb {
-  -webkit-appearance: none;
+input::-webkit-slider-thumb {
   appearance: none;
-  width: 20px;
-  height: 20px;
-  background: red;
+  height: 16px;
+  width: 16px;
   border-radius: 50%;
-  background: #19334d;
-  border: 1px solid #19334d;
-  cursor: pointer;
+  border: 2px solid var(--clr-primary-100);
+  background-color: var(--clr-primary-700);
+  box-shadow: -208px 0 0 200px var(--clr-primary-600);
 }
 
-.range input::-moz-range-progress {
-  background: #19334d; /*this progress background is only shown on Firefox */
+/*=============================================
+            slider-value
+================================================*/
+.slider-value {
+  font-family: var(--ff-font-mono);
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: var(--clr-primary-800);
+  width: 40px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
