Create a class for option to correct select option border-radius

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -183,6 +183,9 @@ input::placeholder {
 /*=============================================
           wrapper
 ================================================*/
+.option {
+  border-radius: var(--br-border-radius);
+}
 .wrapper {
   max-width: 500px;
   padding: 20px;
